testsuite/tests/indexed-types/should_fail/T7788.stderr

T7788.hs:19:20: error:
    Reduction stack overflow; size = 201
    When simplifying the following type: F (Id (Fix Id))
    Use -freduction-depth=0 to disable this check
    (any upper bound you could choose might fail unpredictably with
     minor updates to GHC, so disabling the check is recommended if
     you're sure that type checking should terminate)
    In the first argument of ‘foo’, namely ‘Proxy’
    In the second argument of ‘($)’, namely ‘foo Proxy’
    In the expression: print $ foo Proxy
